[tool.poetry]
name = "tensorflownow"
version = "0.0.20240323143349"
description = ""
authors = ["Talbot3 <4wunian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
tensorflow = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
