[tool.poetry]
name = "tensorflownow"
version = "0.0.20240323143838"
description = ""
authors = ["Talbot3 <4wunian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
tensorflow = "^2.16.1"
tensorflow-metal = "^1.1.0"
tf-keras = "^2.16.0"
jieba = "^0.42.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
